# paperqa-chat

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  app.py
client/: package-lock.json  package.json
client/src/: App.vue
nbs/: 00_initial_paperqa_exploration.ipynb
server/: app.py  pyproject.toml
