[project]
name = "paperqa-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "google-generativeai>=0.8.5",
    "jupyter>=1.1.1",
    "paper-qa>=5.27.0",
    "python-fasthtml>=0.12.22",
]
